syntax = "proto3";

message GeocodingDatabase {
    Geonames geonames = 1;
    SearchTree index = 2;
    repeated SearchTree languageIndex = 3;
    GeoTree geotree = 4;

    message Geoname {
        int32 id = 1;
        string name = 2;
        float latitude = 4;
        float longitude = 5;
        float ranking = 6;
        float elevation = 7;
        string feature_code = 8;
        string country_iso2 = 9;
        int32 country_id = 18;
        int32 admin1_id = 10;
        int32 admin2_id = 11;
        int32 admin3_id = 12;
        int32 admin4_id = 13;
        int32 timezone_index = 14;
        uint32 population = 15;
        map<int32, string> alternativeNames = 16;
        repeated string postcodes = 17;
    }
    
    message Geonames {
        map<int32, Geoname> geonames = 1;
        repeated string timezones = 2;
        repeated string languages = 3;
    }

    message GeoTree {
        repeated int32 ordered = 1;
        repeated float values = 2;
    }
    
    message SearchTree {
        repeated int32 ids = 1;
        map<string, SearchTree> branches = 2;
        repeated PartialName buffer = 3;
    }
    
    message PartialName {
        int32 id = 1;
        string remaining = 2;
    }
}
